--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,34 +1,51 @@
-#initiation docker avec chat GPT
-name: le_21
+name: le21_dev
 
 services:
-  api:
-    container_name: le_21_api
-    build: ./api
-    working_dir: /app
-    environment:
-      - APP_ENV=dev
-      - COMPOSER_ALLOW_SUPERUSER=1
-      - DATABASE_URL=mysql://le_21:le_21@db:3306/le_21?serverVersion=8.0
-    volumes:
-      - ./api:/app
-    ports:
-      - '8080:8080'
-    depends_on:
-      - db
-
   db:
-    container_name: le_21_db
-    image: mysql:8.0
+    image: mysql:8
+    container_name: le21_db
     environment:
-      - MYSQL_ROOT_PASSWORD=root
-      - MYSQL_DATABASE=le_21
-      - MYSQL_USER=le_21
-      - MYSQL_PASSWORD=le_21
+      MYSQL_ROOT_PASSWORD: root
+      MYSQL_DATABASE: le_21
+      MYSQL_USER: le_21
+      MYSQL_PASSWORD: le_21
+    # si un MySQL tourne déjà en local, supprime ces ports
     ports:
-      - '3306:3306'
-    volumes:
-      - le21_dbdata:/var/lib/mysql
+      - "3306:3306"
+    healthcheck:
+      test: ["CMD-SHELL", "mysqladmin ping -h 127.0.0.1 -proot --silent"]
+      interval: 5s
+      timeout: 5s
+      retries: 30
 
-volumes:
-  le21_dbdata:
+  api:
+    container_name: le21_api
+    build:
+      context: ./api
+      dockerfile: Dockerfile
+    environment:
+      APP_ENV: prod
+      APP_SECRET: ${APP_SECRET}
+      DATABASE_URL: mysql://le_21:le_21@db:3306/le_21?serverVersion=8.4
+      DB_HOST: db
+      DB_PORT: "3306"
+      DB_USER: le_21
+      DB_PASSWORD: le_21
+    depends_on:
+      db:
+        condition: service_healthy
+    ports:
+      - "8080:80"     # http://localhost:8080
+
+  front:
+    container_name: le21_front
+    build:
+      context: .
+      dockerfile: Dockerfile.front
+      args:
+        # URL vue par le navigateur. Ajuste si tu mets un domaine / proxy
+        VITE_API_URL: "http://localhost:8080"
+    ports:
+      - "3000:80"     # http://localhost:3000
+    depends_on:
+      - api
