--- a/api/composer.json
+++ b/api/composer.json
@@ -15,6 +15,7 @@
         "symfony/yaml": "7.3.*"
     },
     "require-dev": {
+        "symfony/phpunit-bridge": "^7.3"
     },
     "config": {
         "allow-plugins": {
