--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -25,7 +25,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      # ----- API (Symfony dans api/) -----
+      # --- API (Symfony) ---
       - name: Setup PHP
         uses: shivammathur/setup-php@v2
         with:
@@ -43,9 +43,12 @@ jobs:
 
       - name: Run PHPUnit
         working-directory: api
-        run: vendor/bin/simple-phpunit --testdox
+        run: |
+          if [ -x vendor/bin/simple-phpunit ]; then vendor/bin/simple-phpunit --testdox; \
+          elif [ -x vendor/bin/phpunit ]; then vendor/bin/phpunit --testdox; \
+          else echo "No PHPUnit found, skipping"; fi
 
-      # ----- Front (build check) -----
+      # --- FRONT (build check) ---
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
@@ -59,41 +62,30 @@ jobs:
   docker-build-push:
     runs-on: ubuntu-latest
     needs: build-and-test
-  
+
     steps:
       - uses: actions/checkout@v4
-      - name: Set up Buildx
-        uses: docker/setup-buildx-action@v3
 
-      - name: Login to Docker Hub
+      - name: login to docker hub
         uses: docker/login-action@v3
         with:
-            registry: docker.io
-            username: mathye59
-            password: ${{ secrets.DOCKERHUB_PASSWORD }}
+          registry: docker.io
+          username: ${{ secrets.DOCKERHUB_USERNAME }}   # ou mets: mathye59
+          password: ${{ secrets.DOCKERHUB_PASSWORD }}   # token Docker Hub
 
+      # --- Build & push API (Symfony) ---
+      - name: Build API image
+        run: docker build -t docker.io/${{ secrets.DOCKERHUB_USERNAME }}/le21_api:latest -f api/Dockerfile ./api
 
-      # API image
-      - name: Build & push API
-        uses: docker/build-push-action@v6
-        with:
-          context: ./api
-          file: ./api/Dockerfile
-          push: true
-          tags: |
-            docker.io/mathye59/le21_api:latest
-            docker.io/mathye59/le21_api:${{ github.sha }}
- 
-      # Front image
-      - name: Build & push FRONT
-        uses: docker/build-push-action@v6
-        with:
-          context: .
-          file: ./Dockerfile.front
-          push: true
-          build-args: |
-            VITE_API_URL=http://localhost:8080
-          tags: |
-            docker.io/mathye59/le21_front:latest
-            docker.io/mathye59/le21_front:${{ github.sha }}
+      - name: Push API image
+        run: docker push docker.io/${{ secrets.DOCKERHUB_USERNAME }}/le21_api:latest
 
+      # --- Build & push FRONT (React) ---
+      - name: Build FRONT image
+        run: docker build \
+               --build-arg VITE_API_URL=http://localhost:8080 \
+               -t docker.io/${{ secrets.DOCKERHUB_USERNAME }}/le21_front:latest \
+               -f Dockerfile.front .
+
+      - name: Push FRONT image
+        run: docker push docker.io/${{ secrets.DOCKERHUB_USERNAME }}/le21_front:latest
