--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -70,7 +70,7 @@ jobs:
         uses: docker/login-action@v3
         with:
           registry: docker.io
-          username: ${{ secrets.DOCKERHUB_USERNAME }}   # ou mets: mathye59
+          username: ${{ secrets.DOCKERHUB_USERNAME }}   
           password: ${{ secrets.DOCKERHUB_PASSWORD }}   # token Docker Hub
 
       # --- Build & push API (Symfony) ---
@@ -82,10 +82,12 @@ jobs:
 
       # --- Build & push FRONT (React) ---
       - name: Build FRONT image
-        run: docker build \
-               --build-arg VITE_API_URL=http://localhost:8080 \
-               -t docker.io/${{ secrets.DOCKERHUB_USERNAME }}/le21_front:latest \
-               -f Dockerfile.front .
+        run: |
+            docker build \
+            -f Dockerfile.front \
+            --build-arg VITE_API_URL=http://localhost:8080 \
+            -t mathye59/le21_front:latest \
+            .
 
       - name: Push FRONT image
         run: docker push docker.io/${{ secrets.DOCKERHUB_USERNAME }}/le21_front:latest
