--- a/api/.env
+++ b/api/.env
@@ -24,3 +24,6 @@ APP_ENV=dev
 # serverVersion doit correspondre à l'image MySQL (ici 8.4 LTS)
 DATABASE_URL="mysql://le_21:le_21@db:3306/le_21?serverVersion=8.4"
 ###< doctrine/doctrine-bundle ###
+###> nelmio/cors-bundle ###
+CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
+###< nelmio/cors-bundle ###
