--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,7 +31,7 @@ services:
       db:
         condition: service_healthy
     ports:
-      - "8080:80"   # http://localhost:8080
+      - "8080:80"   
     volumes:
       - ./api:/var/www/html   # ⚠️ essentiel : monte le code (src/Entity visible dans le conteneur)
 
@@ -42,9 +42,9 @@ services:
       context: .
       dockerfile: Dockerfile.front
       args:
-        VITE_API_URL: "http://localhost:8080"
+        VITE_API_URL: "http://127.0.0.1:8080"
     ports:
-      - "3000:8080"     # http://localhost:3000
+      - "3000:80"     
     depends_on:
       - api
 
