--- a/Dockerfile.front
+++ b/Dockerfile.front
@@ -1,16 +1,15 @@
 # ----- build -----
 FROM node:20-alpine AS build
 WORKDIR /app
-COPY package*.json ./
+COPY front/package*.json ./
 RUN npm ci
-# passer la variable à Vite pour le build (import.meta.env.VITE_API_URL)
 ARG VITE_API_URL
 ENV VITE_API_URL=${VITE_API_URL}
-COPY . .
+COPY front/ .
 RUN npm run build
 
 # ----- runtime -----
 FROM nginx:1.27-alpine
-# config SPA: toutes les routes renvoient index.html
+# SPA: toutes les routes → index.html
 RUN printf 'server { listen 80; server_name _; root /usr/share/nginx/html; index index.html; location / { try_files $uri /index.html; } }' > /etc/nginx/conf.d/default.conf
 COPY --from=build /app/dist /usr/share/nginx/html
