--- a/Dockerfile.front
+++ b/Dockerfile.front
@@ -1,15 +1,21 @@
 # ----- build -----
 FROM node:20-alpine AS build
 WORKDIR /app
-COPY front/package*.json ./
+
+# installe les deps
+COPY package*.json ./
 RUN npm ci
+
+# passe l'URL d'API à Vite
 ARG VITE_API_URL
 ENV VITE_API_URL=${VITE_API_URL}
-COPY front/ .
+
+# copie tout le front (tel qu'il est à la racine chez toi)
+COPY . .
 RUN npm run build
 
 # ----- runtime -----
 FROM nginx:1.27-alpine
-# SPA: toutes les routes → index.html
+# SPA: toutes les routes -> index.html
 RUN printf 'server { listen 80; server_name _; root /usr/share/nginx/html; index index.html; location / { try_files $uri /index.html; } }' > /etc/nginx/conf.d/default.conf
 COPY --from=build /app/dist /usr/share/nginx/html
