--- a/api/config/packages/vich_uploader.yaml
+++ b/api/config/packages/vich_uploader.yaml
@@ -4,8 +4,12 @@ vich_uploader:
   metadata: { type: attribute }
   mappings:
     media_files:
+      uri_prefix: /uploads/media
       upload_destination: '%kernel.project_dir%/public/uploads/media'
+      namer: Vich\UploaderBundle\Naming\SmartUniqueNamer
     flash_images:
+      uri_prefix: /uploads/flashes
       upload_destination: '%kernel.project_dir%/public/uploads/flashes'
     company_logos:
+      uri_prefix: /uploads/logos
       upload_destination: '%kernel.project_dir%/public/uploads/logos'
