--- a/api/composer.json
+++ b/api/composer.json
@@ -24,6 +24,7 @@
         "symfony/expression-language": "7.3.*",
         "symfony/flex": "^2",
         "symfony/framework-bundle": "7.3.*",
+        "symfony/html-sanitizer": "7.3.*",
         "symfony/intl": "7.3.*",
         "symfony/monolog-bundle": "^3.10",
         "symfony/property-access": "7.3.*",
