--- a/api/config/packages/vich_uploader.yaml
+++ b/api/config/packages/vich_uploader.yaml
@@ -10,6 +10,8 @@ vich_uploader:
     flash_images:
       uri_prefix: /uploads/flashes
       upload_destination: '%kernel.project_dir%/public/uploads/flashes'
+      namer: Vich\UploaderBundle\Naming\SmartUniqueNamer
     company_logos:
       uri_prefix: /uploads/logos
       upload_destination: '%kernel.project_dir%/public/uploads/logos'
+      namer: Vich\UploaderBundle\Naming\SmartUniqueNamer
