creer user et essayer connexion plu sfaire les templates

--- a/api/.env
+++ b/api/.env
@@ -27,3 +27,7 @@ DATABASE_URL="mysql://le_21:le_21@db:3306/le_21?serverVersion=8.4"
 ###> nelmio/cors-bundle ###
 CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
 ###< nelmio/cors-bundle ###
+
+###> symfony/mailer ###
+MAILER_DSN=smtp://user:pass@smtp.your-host:587
+###< symfony/mailer ###
