--- a/api/composer.json
+++ b/api/composer.json
@@ -26,6 +26,7 @@
         "symfony/framework-bundle": "7.3.*",
         "symfony/html-sanitizer": "7.3.*",
         "symfony/intl": "7.3.*",
+        "symfony/mailer": "7.3.*",
         "symfony/monolog-bundle": "^3.10",
         "symfony/property-access": "7.3.*",
         "symfony/property-info": "7.3.*",
@@ -37,6 +38,7 @@
         "symfony/twig-bundle": "7.3.*",
         "symfony/validator": "7.3.*",
         "symfony/yaml": "7.3.*",
+        "symfonycasts/reset-password-bundle": "*",
         "twig/extra-bundle": "^2.12|^3.0",
         "twig/twig": "^2.12|^3.0",
         "vich/uploader-bundle": "^2.8"
