--- a/api/composer.json
+++ b/api/composer.json
@@ -44,6 +44,7 @@
         "vich/uploader-bundle": "^2.8"
     },
     "require-dev": {
+        "doctrine/doctrine-fixtures-bundle": "*",
         "symfony/maker-bundle": "^1.64",
         "symfony/phpunit-bridge": "^7.3"
     },
