back presque fini!!! reste verification commentaire après avoir fait le front!

--- a/api/config/services.yaml
+++ b/api/config/services.yaml
@@ -15,6 +15,10 @@ services:
     # this creates a service per class whose id is the fully-qualified class name
     App\:
         resource: '../src/'
-
+        
+    App\EventSubscriber\MediaCarrouselSubscriber:
+        tags:
+            - { name: doctrine.event_listener, event: postPersist }
+            - { name: doctrine.event_listener, event: postUpdate }
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
