--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -44,15 +44,7 @@ services:
     image: node:20-alpine
     container_name: le21_front
     working_dir: /app
-    command: sh -c "
-      echo '⏳ Attente de l API sur http://api:80...';
-      while ! wget -q --spider http://api:80 2>/dev/null; do 
-        echo '   Toujours en attente...';
-        sleep 2;
-      done;
-      echo '✅ API accessible, démarrage du front...';
-      npm ci && npm run dev -- --host --port 5173
-      "
+    command: sh -c "npm ci && npm run dev -- --host --port 5173"
     environment:
       VITE_API_URL: "http://127.0.0.1:8080"
       CHOKIDAR_USEPOLLING: "true"
