--- a/Dockerfile.front
+++ b/Dockerfile.front
@@ -1,14 +1,22 @@
-# ----- build -----
-FROM node:20-alpine AS build
-WORKDIR /app
-COPY package*.json ./
-RUN npm ci
-ARG VITE_API_URL
-ENV VITE_API_URL=${VITE_API_URL}
-COPY . .
-RUN npm run build
+FROM node:20-alpine
 
-# ----- runtime -----
-FROM nginx:1.27-alpine
-RUN printf 'server { listen 80; server_name _; root /usr/share/nginx/html; index index.html; location / { try_files $uri /index.html; } }' > /etc/nginx/conf.d/default.conf
-COPY --from=build /app/dist /usr/share/nginx/html
+WORKDIR /app
+
+# Copie package.json et package-lock.json
+COPY package*.json ./
+
+# Installation avec logs verbeux
+RUN echo "📦 Installation des dépendances..." && \
+    npm cache clean --force && \
+    npm install --legacy-peer-deps --verbose && \
+    echo "✅ Installation terminée" && \
+    echo "🔍 Vérification react-router-dom..." && \
+    npm list react-router-dom || echo "⚠️  react-router-dom non trouvé!"
+
+# Copie le code source
+COPY . .
+
+EXPOSE 5173
+
+# Commande avec fallback d'installation
+CMD ["sh", "-c", "echo '🔍 Vérif modules...' && ls node_modules/react-router-dom && npm run dev -- --host --port 5173 || (echo '⚠️ Réinstallation...' && npm install --legacy-peer-deps && npm run dev -- --host --port 5173)"]
