--- a/api/.env
+++ b/api/.env
@@ -16,13 +16,14 @@
 
 ###> symfony/framework-bundle ###
 APP_ENV=dev
+APP_DEBUG=1
 
 ###< symfony/framework-bundle ###
 
 ###> doctrine/doctrine-bundle ###
 # Host "db" = nom du service MySQL dans docker-compose
 # serverVersion doit correspondre à l'image MySQL (ici 8.4 LTS)
-DATABASE_URL="mysql://le_21:le_21@db:3306/le_21?serverVersion=8.4"
+DATABASE_URL="mysql://le_21:le_21@127.0.0.1:3306/le_21?serverVersion=8.4"
 ###< doctrine/doctrine-bundle ###
 ###> nelmio/cors-bundle ###
 CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
